--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>ESTO ES UN TITULO</h1>
-    <h2>esto es un h2</h2></h2></h2>
+    <h2>esto es el primer h2</h2>
+    <h2>esto es el segundo h2</h2>
+    <h2>esto es el tercer  h2</h2>
 </body>
 </html>
